Fix tabs alignment

--- a/src/views/RecIM/components/Forms/Forms.module.scss
+++ b/src/views/RecIM/components/Forms/Forms.module.scss
@@ -12,5 +12,5 @@
 .scrollableCenteredTabs {
   display: flex;
   justify-content: center;
-  width: 75vw;
+  max-width: 65vw;
 }
